# mazepa

./: .gitignore  .keylogs.csv  README.md  README.txt  compile_logger.sh  k3yl0gg3r
implant/: .clang-format  .gitignore  Makefile
implant/includes/: aes.h  implant.h
implant/sources/: aes.c  daemon.c  kbd.c  keyboard.c  logger.c  main.c  net.c  opt.c  utils.c
implant/utils/: install-deps.sh
logger/: Makefile  clean_script
logger/binaries/: cleaned  compressed  default  stripped
logger/include/: keylogger.h
logger/includes/: implant.h
logger/sources/: get_keyboard.c  keyboard.c  logger.c  main.c  opt.c  random_functions.c  socket.c  utils.c
mazepa/: Cargo.toml
mazepa-implant/: .gitignore  Makefile
mazepa-implant/includes/: implant.h
mazepa-implant/sources/: evloop.c  icmp.c  kbd.c  main.c  opt.c  ringbuf.c  utils.c
mazepa-server/: .gitignore  Cargo.toml  Dockerfile  Makefile  go.mod  go.sum  main.go
mazepa-server/cli/: parser.go  types.go
mazepa-server/icmp/: pkg.go  pkg_test.go
mazepa/src/: cfg.rs  main.rs
module/: Cargo.toml
module/ivansir/: Cargo.toml  Makefile
module/scripts/: compile.sh  install-deps.sh
server/: .clang-format  .keylogs.csv  Makefile  TCP_handler.py  interface.py  requirements.txt  test.py
server/includes/: server.h
server/scripts/: setup.sh
server/sources/: csv.c  keys.c  lexxer.c  loop.c  main.c  net.c
